[incidents,users] setup

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,8 @@
 PORT=3000
 
 # URL of the Mongo DB
-MONGODB_URL=mongodb://127.0.0.1:27017/node-boilerplate
+# MONGODB_URL=mongodb://127.0.0.1:27017/node-boilerplate
+MONGODB_URL=mongodb+srv://foush:dqUe3VLUfDdARvGe@cluster0.ziqxjjw.mongodb.net/test
 
 # JWT
 # JWT secret key
@@ -23,3 +24,7 @@ SMTP_PORT=587
 SMTP_USERNAME=email-server-username
 SMTP_PASSWORD=email-server-password
 EMAIL_FROM=support@yourapp.com
+
+# FAKEEMAIL=jurovamaria@colevillecapital.com
+# db_pass = dqUe3VLUfDdARvGe
+# db_username = foush
