--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "scripts": {
     "start": "pm2 start ecosystem.config.json --no-daemon",
     "userseed": "cross-env NODE_ENV=development node src/seeds/user-seeder.js",
+    "incidentseed": "cross-env NODE_ENV=development node src/seeds/incident-seeder.js",
     "dev": "cross-env NODE_ENV=development nodemon src/index.js",
     "test": "jest -i --colors --verbose --detectOpenHandles",
     "test:watch": "jest -i --watchAll",
